--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,13 @@ org.gradle.parallel=true
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.28
 loader_version=0.14.21
+loom_version=1.3-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.1
 maven_group=com.vorono4ka
 archives_base_name=no-more-dimensions
 
 # Dependencies
 fabric_version=0.76.0+1.19.2
+eden_ring_version=0.6.4
