--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,15 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.28
-loader_version=0.14.21
+loader_version=0.14.22
 loom_version=1.3-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.7
+mod_version=1.0.8
 maven_group=com.vorono4ka
 archives_base_name=no-more-dimensions
 
 # Dependencies
 fabric_version=0.76.0+1.19.2
+cloth_config_version=8.3.103
+mod_menu_version=4.0.5
